# naviguider_simpleserial

./: .gitignore  LICENSE  README.md  setup.cfg
docs/: api.rst  conf.py  device_support.rst  example.rst  index.rst  installation.rst
src/naviguider_simpleserial/: __init__.py  application_mode.py  coordinate_system.py  event.py  meta_event.py  meta_event_type.py  mounting_option.py  sensor_event.py  sensor_type.py  test_result.py  wakeup_event.py
