[metadata]
name = naviguider-simpleserial
version = 0.0.2
author = Jeremiah Mattison
author_email = jmattison@pnicorp.com
description = Naviguider-UART/Headway SimpleSerial encoder/decoder
long_description = file: README.md
long_description_content_type = text/markdown
url = https://bitbucket.org/pnisensor/lib-naviguider-simpleserial-py.git
project_urls =
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =

[options.packages.find]
where = src